# SDL2_0_Tutorials

./: CMakeLists.txt  README.md
LazyFooProduct/: CMakeLists.txt
LazyFooProduct/01_hello_SDL/: CMakeLists.txt
LazyFooProduct/02_getting_an_image_on_the_screen/: CMakeLists.txt
LazyFooProduct/03_event_driven_programming/: CMakeLists.txt
LazyFooProduct/04_key_presses/: CMakeLists.txt
LazyFooProduct/05_optimized_surface_loading_and_soft_stretching/: CMakeLists.txt
LazyFooProduct/06_extension_libraries_and_loading_other_image_formats/: 06_loading_other_image_formats.cpp  06_main.cpp  CMakeLists.txt
LazyFooProduct/07_texture_loading_and_rendering/: 07_texture_loading_and_rendering.cpp  CMakeLists.txt
LazyFooProduct/08_geometry_rendering/: 08_geometry_rendering.cpp  CMakeLists.txt
LazyFooProduct/09_the_viewport/: 09_the_viewport.cpp  CMakeLists.txt
LazyFooProduct/10_color_keying/: 10_color_keying.cpp  CMakeLists.txt
LazyFooProduct/11_clip_rendering_and_sprite_sheets/: 11_clip_rendering_and_sprite_sheets.cpp  CMakeLists.txt
LazyFooProduct/12_color_modulation/: 12_color_modulation.cpp  CMakeLists.txt
LazyFooProduct/13_alpha_blending/: 13_alpha_blending.cpp  CMakeLists.txt
LazyFooProduct/14_animated_sprites_and_vsync/: 14_animated_sprites_and_vsync.cpp  CMakeLists.txt
LazyFooProduct/15_rotation_and_flipping/: 15_rotation_and_flipping.cpp  CMakeLists.txt
LazyFooProduct/16_true_type_fonts/: 16_true_type_fonts.cpp  CMakeLists.txt
LazyFooProduct/21_sound_effects_and_music/: 21_sound_effects_and_music.cpp  CMakeLists.txt
LazyFooProduct/22_timing/: 22_timing.cpp  CMakeLists.txt
LazyFooProduct/23_advanced_timers/: 23_advanced_timers.cpp  CMakeLists.txt
LazyFooProduct/24_calculating_frame_rate/: 24_calculating_frame_rate.cpp  CMakeLists.txt
LazyFooProduct/25_capping_frame_rate/: 25_capping_frame_rate.cpp  CMakeLists.txt
LazyFooProduct/26_motion/: 26_motion.cpp  CMakeLists.txt
LazyFooProduct/27_collision_detection/: 27_collision_detection.cpp  CMakeLists.txt
LazyFooProduct/28_per-pixel_collision_detection/: 28_per-pixel_collision_detection.cpp  CMakeLists.txt
SDL2-2.0.8/: CMakeLists.txt
SDL2-2.0.8/src/main/windows/: SDL_windows_main.c
cmake/: FindSDL2.cmake  FindSDL2_IMAGE.cmake  FindSDL2_MIXER.cmake  FindSDL2_TTF.cmake
